# term-chat

./: Cargo.toml  README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
radon/: -  -w  .gitignore  Cargo.toml  README.md  radon.toml
radon/migrations/: 1_users.sql
radon/sql/schema/: 001_users.sql
radon/src/: chat.html  config.rs  lib.rs  main.rs
radon/src/api/: error.rs  mod.rs  routes.rs  user.rs
radon/src/api/auth/: error.rs  mod.rs  utils.rs
radon/src/api/users/: error.rs  mod.rs
radon/src/api/ws/: mod.rs
radon/src/auth/: mod.rs
radon/src/client/: error.rs  mod.rs
radon/src/config/: mod.rs
radon/src/db/: error.rs  mod.rs
radon/src/message/: mod.rs
radon/src/middleware/: mod.rs
radon/src/server/: error.rs  mod.rs
radon/src/ws/: mod.rs
server/: Cargo.toml  chat.db
server/migrations/2022-11-21-101206_create_users/: up.sql
server/migrations/2022-11-21-101215_create_rooms/: up.sql
server/migrations/2022-11-21-101223_create_conversations/: up.sql
server/migrations/2022-11-24-034153_generate_dummy_data/: up.sql
server/protos/: commands.proto
server/src/: chat.html  lib.rs  main.rs  models.rs  routes.rs  server.rs  session.rs
server/src/api/: mod.rs
server/src/client/: mod.rs
server/src/db/: error.rs  mod.rs
server/src/message/: mod.rs
server/src/protobufs/: commands.rs  mod.rs
server/src/server/: dispatcher.rs  error.rs  mod.rs
xenon/: Cargo.toml  README.md
xenon/src/: app.rs  lib.rs  main.rs
