[package]
name = "radon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["ws"] }
futures = "0.3.28"
log = "0.4.20"
protobuf = "3.2.0"
rusqlite = "0.29.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
tower = { version = "0.4", features = ["util"] }
tracing-subscriber = "0.3.17"
tracing = "0.1.37"
clap = { version = "4.4.6", features = ["derive", "cargo"] }
figment = { version = "0.10", features = ["toml", "env"] }
sqlx = { version = "0.7", features = [ "runtime-tokio", "tls-native-tls", "postgres", "uuid", "chrono"] }
tower-http = { version = "0.4.4", features = ["cors", "fs", "add-extension", "set-header"] }
validator = { version = "0.16.0", features = ["derive"] }
rand = "0.8.5"
dotenvy = "0.15.7"
chrono = "0.4.31"
axum-macros = "0.3.8"
argon2 = "0.5.2"
jsonwebtoken = "9.1.0"



