[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
log = "0.4.20"
protobuf = "3.2.0"
rusqlite = "0.29.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
thiserror = "1.0.48"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
