[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.1", features = ["derive", "cargo"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread", "full", "io-std"] }
figment = { version = "0.10", features = ["toml", "env"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.71"
serde_json = "1.0.107"
log = "0.4.20"
futures = "0.3.28"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
crossterm = "0.27.0"


